# mario-rust

./: Cargo.toml
.cargo/: config.toml
examples/: game.rs
src/: lib.rs
