[package]
name = "mario-rust"
version = "0.1.0"
edition = "2024"

[lib]
test = false
bench = false

[features]
trace = [ "dep:defmt" ]

[profile.release]
lto = true

[dependencies]
defmt = { version = "1.0.1", optional = true }
rustfsm = { path = "../rustfsm/", version = "0.1.0" }

[dev-dependencies]
cortex-m = { version = "0.7.7", features = [ "critical-section-single-core" ] }
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
embassy-stm32 = { version = "0.2.0", features = [ "stm32g0b1re", "memory-x" ] }
defmt-rtt = "1.0.0"
